--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   margin: 0px;
-  background-image: url("/imgs/capa.jpg");
+  background-image: url("imgs/capa.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
