--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body {
   margin: 0px;
-  background-image: url("imgs/capa.jpg");
+  margin-top: 20vh;
+  height: 100%;
+  background-image: url(imgs/capa.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
@@ -13,11 +15,10 @@ img {
   display: block;
 }
 main {
-  margin-top: 200px;
   background-image: linear-gradient(#3a3939c7, black);
   display: grid;
-
   justify-content: center;
+  height: 80vh;
 }
 .introducao {
   display: grid;
@@ -146,8 +147,7 @@ footer {
   position: absolute;
   width: 100%;
   height: 100px;
-
-  bottom: -20px;
+  bottom: 0;
   background-color: rgb(0 0 0 / 94%);
   align-items: flex-start;
 }
